fix option/category overlay spacing

--- a/source/stylesheets/layout.sass
+++ b/source/stylesheets/layout.sass
@@ -444,7 +444,7 @@ a.continue-shopping-button
   position: relative
   width: 100%
   
-  @media screen and (max-width: $break-extra-small)
+  @media screen and (max-width: $break-small)
     &.open
       position: fixed
       z-index: 10
@@ -461,13 +461,20 @@ a.continue-shopping-button
           font-size: 25px
           
         .navigation-header
+          height: auto
+          line-height: 25px
+          padding: 50px
           width: 100vw
       
       .shop-dropdown
         height: 100vh
         max-height: 100vh
-        padding: 25px
-        top: 50px
+        padding: 25px 50px
+        top: 100px
+        
+        .dropdown-links .dropdown-link
+          line-height: 20px
+          padding: 12px 0
   
   .navigation-header
     +flexbox
@@ -566,11 +573,11 @@ a.continue-shopping-button
       bottom: 0
       height: 100vh
       max-height: 100vh
-      max-width: 100vh
+      max-width: 100vw
       position: fixed
       right: 0
       top: 0
-      width: 100vh
+      width: 100vw
       z-index: 10
       
     @media screen and (max-width: $break-extra-small)
